--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}We Movies{% endblock %}</title>
+    <link rel="icon"
+          href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+    {% block stylesheets %}
+                    {{ encore_entry_link_tags('app') }}
+                    {{ encore_entry_link_tags('mainstyles') }}
+{#        <link href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">#}
+{#        <link href="{{ asset('assets/css/main.css') }}" rel="stylesheet">#}
+{#        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">#}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    {% endblock %}
+</head>
+<body>
+    {% block header %}{% endblock %}
+    {% block banner %}{% endblock %}
+    <!-- Main Content with Sidebar and Page Content -->
+    <div class="container my-5">
+        <div class="row">
+            {% block body %}{% endblock %}
+        </div>
+    </div>
+    {% block javascripts %}
+                    {{ encore_entry_script_tags('app') }}
+{#                    {{ encore_entry_script_tags('jquery') }}#}
+{#                    {{ encore_entry_script_tags('bootstrap') }}#}
+                    {{ encore_entry_script_tags('bootstrap-autocomplete') }}
+                    {{ encore_entry_script_tags('app-script') }}
+{#        <script src="{{ asset('assets/jquery/jquery.min.js') }}"></script>#}
+{#        <script src="{{ asset('assets/bootstrap/js/bootstrap.bundle.min.js') }}"></script>#}
+{#        <script src="{{ asset('assets/js/bootstrap-autocomplete.js') }}"></script>#}
+{#        <script src="{{ asset('assets/js/script.js') }}"></script>#}
+    {% endblock %}
+</body>
 </html>
