--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -63,7 +63,8 @@
                             <p class="card-text">{{ movie.overview }}</p>
                             <p class="card-text">
                             <div class="d-flex justify-content-end">
-                                <a href="#" class="btn btn-primary jqLinkMovie" data-movie-id="{{ movie.id }}">Lire le détails</a>
+                                <a href="#" class="btn btn-primary jqLinkMovie" data-movie-id="{{ movie.id }}">Lire le
+                                    détails</a>
                             </div>
                             </p>
                         </div>
@@ -78,6 +79,7 @@
 
 
     <!-- Structure de la modale Bootstrap -->
+    <input type="hidden" id="jqUrlAjaxMovie" value="{{ path('app_movieitem') }}">
     <div class="modal fade" id="myModalMovie" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" style="max-width: 80%">
             <div class="modal-content">
@@ -90,24 +92,21 @@
                     <div id="modalContent" class="container-fluid">
                         <div class="row">
                             <div class="col-md-1"></div>
-                            <div class="col-md-10 jqYoutube">
-                                <iframe width="100%" height="350" src="https://www.youtube.com/embed/"></iframe>
-                            </div>
+                            <div class="col-md-10 jqYoutube"></div>
                         </div>
                         <div class="row">
                             <div class="col-md-1"></div>
-                            <div class="col-md-10 jqMovieTitle">Titre Film</div>
+                            <h4 class="col-md-10 jqMovieTitle">Titre Film</h4>
                         </div>
                         <div class="row">
                             <div class="col-md-1"></div>
                             <div class="col-md-10">
-                                        <span class="jqMovieGenre">Film : categorie1,categorie2</span>
-                                        <span class="jqMovieRating">{{ 4|rating(5) }}</span>
-                                        <span class="jqMovieRatingAverage">4.4</span>
-                                        <span class="jqMovieRatingUsers">pour 1520 utilisateurs</span>
+                                <span class="jqMovieGenre"></span>
+                                <span class="jqMovieRating"></span>
+                                <span class="jqMovieRatingAverage badge text-bg-dark"></span>
+                                <span class="jqMovieRatingUsers"></span>
                             </div>
                         </div>
-                        <h6 class="jqMovieTitle"></h6>
                     </div>
                 </div>
             </div>
