[EVO] docker ok

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -79,6 +79,7 @@
 
 
     <!-- Structure de la modale Bootstrap -->
+    <input type="hidden" id="jqUrlForCategorie" value="{{ path('app_home') }}">
     <input type="hidden" id="jqUrlAjaxMovie" value="{{ path('app_movieitem') }}">
     <div class="modal fade" id="myModalMovie" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" style="max-width: 80%">
